syntax = "proto3";

package wirelessmeshdomain;

/**
* This is where we define our domain, in this case the events that will be stored.
**/

message CustomerLocationAdded {
  string customerLocationId = 1;
  string accessToken = 2;
  string email = 3;
  string zipcode = 4;
}

message CustomerLocationRemoved {
  string customerLocationId = 1;
  string zipcode = 2;
}

message DeviceActivated {
  string deviceId = 1;
  string customerLocationId = 2;
}

message DeviceRemoved {
  string deviceId = 1;
  string customerLocationId = 2;
}

message RoomAssigned {
  string deviceId = 1;
  string customerLocationId = 2;
  string room = 3;
}

message NightlightToggled {
  string deviceId = 1;
  string customerLocationId = 2;
  bool nightlightOn = 3;
  string accessToken = 4;
}

message DeviceState {
  string device_id = 1;
  bool activated = 2;
  string customer_location_id = 3;
  string room = 4;
  bool nightlight_on = 5;
}

message CustomerLocationState {
  string customer_location_id = 1;
  string access_token = 2;
  string email = 3;
  string zipcode = 4;
  bool added = 5;
  bool removed = 6;
  repeated DeviceState devices = 7;
}
